# deadlinemiss

./: 10tasks_1.08hardFactor_1.08softFactor_60.0hardTasksPerc_92uti_mod.h  10tasks_1.83hardFactor_1.0softFactor_60.0hardTasksPerc_78uti_mod.h  10tasks_1.83hardFactor_1.83softFactor_40.0hardTasksPerc_86uti_mod.h  10tasks_1.83hardFactor_1.83softFactor_60.0hardTasksPerc_70uti.h  10tasks_2.83hardFactor_2.83softFactor_60.0hardTasksPerc_50uti_mod.h  Makefile.am  Makefile.in  init.c  input.h  priority.c  samples.c  samples.h  system.h  tasks.c  uunifast.c
